# cmake

v1/: CMakeLists.txt
v1/src/: mult.cpp
v2/: CMakeLists.txt
v2/src/: div.cpp  sub.cpp
v3/: CMakeLists.txt
v3/cal/: CMakeLists.txt  add.cpp  div.cpp  mult.cpp  sub.cpp
v3/include/: cal.h  sort.h
v3/sort/: CMakeLists.txt  sort.cpp
v3/test1/: CMakeLists.txt  main.cpp
v3/test2/: CMakeLists.txt  main.cpp
